--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,10 +1,12 @@
 *{
-    background-color: lightgray;
+    background-color:initial;
+    font-family:'Roboto', sans-serif;
 }
 
 h1 > span{
     font-size: 50%;
-    color:blue;
+    color: rgb(138, 191, 118);
+    background-color: initial;
 }
 
 div{
@@ -16,10 +18,22 @@ p{
     background-color: initial;
 }
 
+.header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    top:0;
+    left: 0;
+    width:100%;
+    padding: 0px;
+    background-color: rgb(213, 235, 205);
+}   
+
 .txtHeader {
     font-size: 5dvh;
     text-align:center;
-    color: lightseagreen;
+    color: rgb(94, 157, 70);
+    background-color: initial;
 }
 
 .imgCover {
@@ -28,11 +42,12 @@ p{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    
 }
 
 .divCont {
     border: 3px solid darkgray;
-    background-color:lightskyblue;
+    background-color:rgb(239, 247, 237);
 }
 
 .divDatos{
