--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -20,11 +20,13 @@ p{
 
 .header{
     display: flex;
+    position: relative;
     flex-direction: row;
     align-items: center;
     top:0;
     left: 0;
     width:100%;
+    max-height: 30%;
     padding: 0px;
     background-color: rgb(213, 235, 205);
 }   
@@ -88,3 +90,22 @@ p{
     padding: 0px;
 }
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+  
+.dropdown:hover .dropdown-content {
+display: block;
+position: static;
+}
